--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <i class="fas fa-envelope"></i>
           <span>Contact</span>
         </a>
-        <a href="aatkacv.pdf.pdf" target="_blank" class="mobile-nav-link">
+        <a href="asifa cv13" target="_blank" class="mobile-nav-link">
           <i class="fas fa-file-pdf"></i>
           <span>Resume</span>
         </a>
