--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <i class="fas fa-code mr-2"></i>
         View My Work
       </a>
-      <a href="aatkacv.pdf.pdf" target="_blank" class="btn-secondary">
+      <a href="asifa cv13.pdf" target="_blank" class="btn-secondary">
         <i class="fas fa-download mr-2"></i>
         Download Resume
       </a>
