--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Top Navigation Bar -->
   <header class="fixed top-0 left-0 w-full bg-white dark:bg-[#161b22] shadow-md z-40 transition-all duration-300">
     <div class="container mx-auto flex justify-between items-center px-4 py-3">
-      <h1 class="text-xl md:text-2xl font-bold text-gray-800 dark:text-white">Asifa</h1>
+      <h1 class="text-xl md:text-2xl font-bold text-gray-800 dark:text-white"></h1>
       
       <!-- Desktop Navigation -->
       <nav class="hidden md:flex space-x-6 text-base">
@@ -58,7 +58,7 @@
           <i class="fas fa-envelope group-hover:animate-bounce"></i>
           <span>Contact</span>
         </a>
-        <a href="aatkacv.pdf.pdf" target="_blank" class="nav-link group">
+        <a href="asifa cv13.pdf" target="_blank" class="nav-link group">
           <i class="fas fa-file-pdf group-hover:animate-bounce"></i>
           <span>Resume</span>
         </a>
@@ -98,7 +98,7 @@
           <i class="fas fa-envelope"></i>
           <span>Contact</span>
         </a>
-        <a href="asifa cv13" target="_blank" class="mobile-nav-link">
+        <a href="asifa cv13.pdf" target="_blank" class="mobile-nav-link">
           <i class="fas fa-file-pdf"></i>
           <span>Resume</span>
         </a>
